# typer-app

./: pyproject.toml  table.sql
src/typer-app/: __init__.py  main.py  table.sql
src/typer_app/: cli.py  db.py  main.py
