[project]
name = "cli-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cedric Anderson Jr", email = "CTANDERSON2@Anderson.edu" }
]
dependencies = [
    "typer>=0.21.0",
]

[project.scripts]
typer-app = "typer-app:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
